--- a/public/css/frontend/layouts/_page-sidebar.scss
+++ b/public/css/frontend/layouts/_page-sidebar.scss
@@ -6,14 +6,14 @@
     overflow: auto;
     position: fixed;
     top: 0; right: 0;
-    padding-bottom: lh(2);
+    padding-bottom: lh(3);
     width: 300px; height: 100%;
 
     .logo {
         background: url(../images/logo.png) no-repeat 0 0;
 
         position: fixed;
-        bottom: lh(.5); right: lh(.5);
+        bottom: lh(.5); right: lh();
         width: 100px; height: 27px;
     }
 }
